Corrected the bug where navbar is on top not showing properly with a rectangle

--- a/css/hero.css
+++ b/css/hero.css
@@ -12,6 +12,8 @@ section.hero {
   position: relative;
   /* Added */
 
+  background-color: black;
+
   text-align: center;
 }
 
